# u1_nc_dscrt

ANALYSIS/: error_analysis.py
SIMUL/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  u1_nc_dscrt
SIMUL/autom4te.cache/: output.1  requests
SIMUL/head/: head_&_structures.h
SIMUL/input/: input.txt
SIMUL/lib/: dSFMT.c  field_manip.c  in_out.c  initialization.c  measures.c  updates.c  utility.c
SIMUL/lib/.deps/: dSFMT.Po  field_manip.Po  in_out.Po  initialization.Po  measures.Po  updates.Po  utility.Po
SIMUL/src/: main.c
SIMUL/src/.deps/: main.Po
u1_nc_dscrt/: Makefile  Makefile.am  Makefile.in  config.status  configure.ac  input.in  u1_nc_dscrt
u1_nc_dscrt/autom4te.cache/: requests  traces.0  traces.1
u1_nc_dscrt/head/: head_&_structures.h
u1_nc_dscrt/lib/: in_out.c  initialization.c
u1_nc_dscrt/lib/.deps/: dSFMT.Po  field_manip.Po  in_out.Po  initialization.Po  measures.Po  updates.Po  utility.Po
u1_nc_dscrt/src/: main.c
u1_nc_dscrt/src/.deps/: main.Po
